much, much easier.
* Stylesheet URL is now absolute based on root_url in config.php
* Fixed bug with content type changes breaking hierarchy (#000090)
* Fixed bug with start_element in bulletmenu and phplayers
* Fixed bug with css table not having sequence setup correctly (#000093)
* Fixed contact form so that it's xhtml compliant (#000096)

Version 0.8.2 "Taunoa" -- Mon Jan 17 2005
-----------------

* Added wysiwyg body tag callback for making htmlarea work
* Added additional color schemes in CSS Management for overriding
the default theme. (BrumalPat)
* Fixed htaccess.txt to point to a better url
* Fixed hiding/showing of Help boxes
* Fixed link content type so that urls are encoded properly for xhtml
* Fixed handling of attached CSS to WYSIWYGs
* Fixed stylesheet hook to actually send CSS
* Fixed phplayers menu to put CSS in with template CSS so it's easily
cascaded
* Fixed initial database so first user created is not in the admin
group
* Fixed ereg_replace functions in file management (ntro)
* Fixed bug with uploading images in TinyMCE (#000087)
* Fixed bug with ordering if there are more than 10 pages in the 
root of the content hierarchy
* Fixed additional editors not always being saved properly (#000086)
* Lots of other WYSIWYG related bugfixes
* Removed the html blob check in the menu for now

Version 0.8.1 "Papeete" -- Sat Jan 01 2005 
-----------------

* Fixed bugs with upgrading
* Fixed html blobs
* Fixed bug with preview path

Version 0.8 "Tahiti" -- Sat Jan 01 2005 
-----------------

* Added Norwegian translation (Roger 'Stigma' Knutsen)
* Added FCKeditor capability via module (not included)
* Added TinyMCE capability via module (included)
* Added versionname plugin
* Added many many module API callbacks
* Admin and default website are totally xhtml 1.0 transitional compliant
* Admin menu now only shows items that the user could have access to
* Cleaned up root directory by moving things to modules and the lib
directory