@@ -374,6 +374,7 @@ function showPageFour() {
 	$newconfig["image_uploads_url"] = $newconfig['root_url'] ."/uploads/images";
 	$newconfig["default_encoding"] = "";
 	$newconfig["disable_htmlarea_translation"] = false;
+	$newconfig["admin_dir"] = "admin";
 
     $configfile = dirname(dirname(__FILE__))."/config.php";
     ## build the content for config file
