@@ -97,6 +97,8 @@ function cms_config_load($loadLocal = true)
 
 	$config["disable_htmlarea_translation"] = false;
 
+	$config["admin_dir"] = "admin";
+
 	if ($loadLocal == true)
 	{
 		if (file_exists(dirname(dirname(__FILE__))."/config.php") && !cms_config_check_old_config())
